--- a/client/src/containers/home/Login.css
+++ b/client/src/containers/home/Login.css
@@ -1,10 +1,16 @@
 @media all and (min-width: 480px) {
     .Login {
       padding: 60px 0;
+      background-color: tomato;
+      width: 75vw;
+      border-bottom-left-radius: 10px;
+      border-bottom-right-radius: 10px;
+
     }
   
     .Login form {
       margin: 0 auto;
       max-width: 320px;
+      font-weight: 600;
     }
   }
