--- a/client/src/containers/search/ParkItem.css
+++ b/client/src/containers/search/ParkItem.css
@@ -1,25 +1,31 @@
 .parkItem {
   margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .viewButton {
-  width: 50vw;
+  width: 30vw;
   display: inline-block;
   font-weight: 600;
   background-color: rgb(147, 168, 192);
   text-align: center;
   vertical-align: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+  user-select: none;  
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
-  border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-    margin: auto;
-    margin-bottom: 5px;
+  border-radius: 10px;
+  margin: auto;
+  margin-bottom: 5px;
+}
+
+.resultCard {
+  border-radius: 10px;
+}
+
+@media screen and (max-width: 500px) {
+  .parkItem {
+    width: 100vw;
+  }
 }
