--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,5 +2,6 @@ body {
  background-color: rgb(65, 65, 65);
     display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  padding-bottom: 20px;
 }
