--- a/client/src/containers/create/CreateForm.css
+++ b/client/src/containers/create/CreateForm.css
@@ -4,7 +4,14 @@
     border-top-right-radius: 0px;
     border-bottom-left-radius: 10px ;
     border-bottom-right-radius: 10px ;
+    width: 75vw;
 }
+
+@media screen and (max-width: 500px) {
+    .formCard {
+      width: 100vw;
+    }
+  }
 
 .formInput{
     margin-top: 10px;
