--- a/client/src/containers/search/ParkItem.css
+++ b/client/src/containers/search/ParkItem.css
@@ -22,6 +22,8 @@
 
 .resultCard {
   border-radius: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 @media screen and (max-width: 500px) {
