--- a/client/src/containers/search/ParkModal.css
+++ b/client/src/containers/search/ParkModal.css
@@ -1,3 +1,20 @@
-i {
-    margin-right: 5px;
+.modalHeader {
+    background-color: #343a40;
+    color: white;
+}
+
+.modalBody {
+    background-color: tomato;
+}
+
+.addressBlock {
+    margin-bottom: 0px;
+    font-weight: 700;
+}
+
+.modalFooter {
+    background-color: #343a40;
+}
+span {
+    color: white;
 }
