--- a/client/src/containers/search/ParkItem.css
+++ b/client/src/containers/search/ParkItem.css
@@ -26,6 +26,9 @@
   padding-right: 10px;
 }
 
+.card-title {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
 p {
   margin-bottom: 0.25rem;
 }
