--- a/client/src/pages/layout/private/Navbar.css
+++ b/client/src/pages/layout/private/Navbar.css
@@ -1,3 +1,6 @@
+a {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
+}
 .topNav{
     padding: 8px 13px!important;
     width: 75vw;
