--- a/client/src/containers/home/Login.css
+++ b/client/src/containers/home/Login.css
@@ -15,6 +15,7 @@
 .header {
   text-align: center;
   margin-bottom: 10px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 @media screen and (max-width: 500px) {
   .Login {
