--- a/client/src/containers/search/ParkContainer.css
+++ b/client/src/containers/search/ParkContainer.css
@@ -15,6 +15,16 @@
     margin-top: 10px;
 }
 
+.formTitle {
+    text-align: center;
+    font-weight: 600;
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+ 
+.card-body{
+    padding: 0 20px 20px 20px;
+}
 @media screen and (max-width: 500px) {
     .mainCard {
       width: 100vw;
